--- a/css/lab2.css
+++ b/css/lab2.css
@@ -3,26 +3,32 @@
     flex-direction: column;
 }
 
-.task1{
+.lab2_task1{
     padding: 2% 0;
 }
-.task1 a{
+.lab2_task1 a{
     font-size: 24px;
     color: #070707;
 }
-.task1 a:hover{
+.lab2_task1 a:hover{
     color: #ffce2e;
 }
-.task1 a:active{
+.lab2_task1 a:active{
     color: #c79800;
 }
 
-.task2{
-    padding: 2% 0;
+.lab2_task2{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    font-size: 20px;
+}
+
+.inputs{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    font-size: 20px;
+    padding: 2% 0;
 }
 
 .number{
@@ -40,54 +46,4 @@
     padding: 7px;
     border: 2px solid #ffce2e;
     border-radius: 4px;
-}
-.button_task2{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    background-color: #ffffff;
-    border: 1px solid #ffce2e;
-    border-radius: 11px;
-    color: #ffce2e;
-    cursor: pointer;
-    font-size: 18px;
-    font-family: "KyivType";
-    font-weight: bold;
-    padding: 1% 3%;
-    transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    word-break: break-word;
-    width: 25%;
-}
-.button_task2:active,
-.button_task2:hover,
-.button_task2:focus {
-  outline: 0;
-}
-.button_task2:active {
-    background-color: #ffce2e;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
-    color: #FFFFFF;
-  }
-  
-  .button_task2:hover {
-    background-color: #ffce2e;
-    border-color: #c79800;
-    color: #FFFFFF;
-  }
-  
-  .button_task2:active:hover {
-    background-color: #c79800;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
-    color: #FFFFFF;
-  }
-
-  @media (max-width: 500px) {
-    .button_task2{
-        width: 100%;
-    }
 }
