--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ h2{
     font-family: "KyivType";
     font-weight: bold;
 }
+h3{
+    font-size: 24px;
+    font-family: "KyivType";
+    font-weight: bold;
+}
 p{    
     font-size: 18px;
     font-family: "KyivType";
@@ -85,6 +90,62 @@ nav{
     color: #c79800;
 }
 
+.button_submit{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-color: #ffffff;
+    border: 1px solid #ffce2e;
+    border-radius: 11px;
+    color: #ffce2e;
+    cursor: pointer;
+    font-size: 18px;
+    font-family: "KyivType";
+    font-weight: bold;
+    padding: 1% 3%;
+    transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    word-break: break-word;
+    width: 25%;
+}
+.button_submit:active,
+.button_submit:hover,
+.button_submit:focus {
+  outline: 0;
+}
+.button_submit:active {
+    background-color: #ffce2e;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+    color: #FFFFFF;
+  }
+  
+  .button_submit:hover {
+    background-color: #ffce2e;
+    border-color: #c79800;
+    color: #FFFFFF;
+  }
+  
+  .button_submit:active:hover {
+    background-color: #c79800;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+    color: #FFFFFF;
+  }
+
+@media (max-width: 1000px) {
+    .button_submit{
+        width: 50%;
+    }
+}
+
+@media (max-width: 500px) {
+    .button_submit{
+        width: 100%;
+    }
+}
 
 
 
